--- a/package.json
+++ b/package.json
@@ -16,24 +16,32 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
-    "@tailwindcss/vite": "^4.0.0",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/themes": "^3.2.0",
+    "@szhsin/react-menu": "^4.3.0",
+    "@tailwindcss/vite": "^4.0.4",
     "bootstrap": "^5.3.3",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-transition-group": "^4.4.5",
-    "swiper": "^11.2.1",
-    "tailwindcss": "^4.0.0"
+    "styled-components": "^6.1.15",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.4",
     "vite": "^6.0.5"
   }
 }
