--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.1"
