--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@szhsin/react-menu": "^4.3.0",
     "@tailwindcss/vite": "^4.0.6",
     "bootstrap": "^5.3.3",
+    "build": "^0.1.4",
     "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
