--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/themes": "^3.2.0",
     "@szhsin/react-menu": "^4.3.0",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "next": "^15.1.6",
     "react": "^18.3.1",
@@ -45,6 +46,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.7",
-    "vite": "^0.10.3"
+    "vite": "^6.1.1"
   }
 }
