--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/themes": "^3.2.0",
     "@szhsin/react-menu": "^4.3.0",
+    "@tailwindcss/oxide": "^4.0.9",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "build": "^0.1.4",
+    "lightningcss": "^1.29.1",
     "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
