--- a/package.json
+++ b/package.json
@@ -11,28 +11,29 @@
   },
   "dependencies": {
     "@coreui/react": "^5.5.0",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.9"
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.9",
     "vite": "^6.2.0"
   }
 }
