--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@coreui/react": "^5.5.0",
+    "@react-spring/web": "^9.7.5",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
